--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         android:theme="@style/Theme.ThiTracNghiem"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ResetPasswordActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Activity.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.UpdateAccountActivity"
             android:exported="false" />
         <activity
